--- a/css/App.css
+++ b/css/App.css
@@ -6,3 +6,11 @@
     align-items: center;
     justify-content: flex-start;
 }
+
+.classBtnCorrecto{
+    background-color: rgb(36, 214, 36);
+}
+
+.classBtnIncorrecto{
+    background-color: rgb(223, 22, 22)
+}
